# sotas-sdb-supply-stability

./: .gitignore  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: chemicals_loader.py  gemini_client.py  main.py  materials.yml  materials_scope.yml  scoring.py  scoring_llm.py  source_inspector.py  sumitomo_app.py  sumitomo_loader.py  sumitomo_materials.yml  sumitomo_overrides.yml  sumitomo_upstream.yml
app/pages/: 01_物質詳細.py  02_軸データブラウザ.py  03_出典methodology.py
data/anrpc/: events_20260523.parquet
data/axis6_classified/: dart_major_matters_classified_20260521.parquet  edinet_extraordinary_classified_20260521.parquet  tdnet_disclosure_classified_20260521.parquet  twse_material_info_classified_20260521.parquet
ingest/: anrpc_irsg_events.py  chem_daily_sitemap.py  chem_news_rss.py  comtrade.py  dart_major_matters.py  disruption_classify.py  echa.py  echa_restriction.py  edinet_batch_collect.py  edinet_batch_submit.py  edinet_capacity.py  edinet_extraordinary.py  emdat_disasters.py  estat_trade.py  faostat_natural_rubber.py  hs_codes.yml  hs_codes_expand.yml  hs_codes_expand2.yml  imf_prices.py  jpca_monthly.py  jpca_utilization.py  lme_prices.py  meti_production.py  nite_accidents.py  prtr_meti.py  regulations.py  rubber_industry_rss.py  sec_10k_riskfactor.py  sec_8k.py  sec_classify.py  strategic_materials_flag.py  sumitomo_build.py  sumitomo_coverage_audit.py  sumitomo_data_expand.py  supplier_concentration.py  tdnet_disclosure.py  twse_classify_rule.py  twse_material_info.py  usda_psd.py  usgs_mineral_concentration.py  (+1 more)
(+64 files in other folders)
