[project]
name = "sotas-sdb-supply-stability"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.103.1",
    "duckdb>=1.5.2",
    "lxml>=6.1.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "pyarrow>=24.0.0",
    "pymupdf>=1.27.2.3",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "streamlit>=1.57.0",
]
